--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -201,11 +201,7 @@
      <Compile Include="Assets\Model\Module\Resource\ResourcesComponent.cs" />
      <Compile Include="Assets\Model\Module\Resource\VersionConfig.cs" />
      <Compile Include="Assets\Model\Module\UnityWebRequest\UnityWebRequestAsync.cs" />
-     <Compile Include="Assets\Model\Move\MoveComponent.cs" />
-     <Compile Include="Assets\Model\Move\UnitPathComponent.cs" />
      <Compile Include="Assets\Model\Session\SessionComponent.cs" />
-     <Compile Include="Assets\Model\Unit\Player.cs" />
-     <Compile Include="Assets\Model\Unit\PlayerComponent.cs" />
      <Compile Include="Assets\Model\Unit\TurnComponent.cs" />
      <Compile Include="Assets\Model\Unit\Unit.cs" />
      <Compile Include="Assets\Model\Unit\UnitComponent.cs" />
@@ -798,6 +794,9 @@
       <Project>{E15BADD2-3A26-309A-AB0F-DC5B08044350}</Project>
       <Name>Unity.ThirdParty</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\Model\Move" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
