1.UI创建，父亲设置正确，UI的GameObject放在Global/UI下，其组件在对应的Scene下 2.网络连接成功

--- a/Unity/Unity.ModelView.csproj
+++ b/Unity/Unity.ModelView.csproj
@@ -68,7 +68,10 @@
      <Compile Include="Assets\ModelView\Module\UI\UIEventAttribute.cs" />
      <Compile Include="Assets\ModelView\Module\UI\UIComponent.cs" />
      <Compile Include="Assets\ModelView\Module\UI\UIType.cs" />
-     <Compile Include="Assets\ModelView\Module\UI\UIEventComponent.cs" />
+     <Compile Include="Assets\ModelView\MonoBehaviour\GizmosDebug.cs" />
+     <Compile Include="Assets\ModelView\MonoBehaviour\Init.cs" />
+     <Compile Include="Assets\ModelView\MonoBehaviour\ReferenceCollector.cs" />
+     <Compile Include="Assets\ModelView\MonoBehaviour\UILayerScript.cs" />
      <Compile Include="Assets\ModelView\Opera\OperaComponent.cs" />
      <Compile Include="Assets\ModelView\ReferenceCollector.cs" />
      <Compile Include="Assets\ModelView\Scene\SceneChangeComponent.cs" />
