--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -49,13 +49,18 @@
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message}" />
 	</targets>
-  
-  <targets>
+
+	<targets>
 		<target name="fatal" xsi:type="File"
-			openFileCacheTimeout="3600"
-			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appIdFormat}-Fatal-${date:universalTime=true:format=yyyyMMdd}.log"
-			deleteOldFileOnStartup="false"
-			layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}" />
+				openFileCacheTimeout="3600"
+				fileName="${basedir}/../Logs/Log-${var:appType}-${var:appIdFormat}-Fatal-${date:universalTime=true:format=yyyyMMdd}.log"
+				deleteOldFileOnStartup="false"
+				layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}"/>
+	</targets>
+
+	<targets>
+		<target name="logconsole" xsi:type="Console"
+				layout="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}"/>
 	</targets>
 	
 	<rules>
@@ -66,5 +71,6 @@
 		<logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="warn" />
 		<logger name="*" minlevel="Error" maxlevel="Error" writeTo="error" />
 		<logger name="*" minlevel="Fatal" maxlevel="Fatal" writeTo="fatal" />
+		<logger name="*" minlevel="Info" maxlevel="Fatal" writeTo="logconsole" />
 	</rules>
 </nlog>
