--- a/Server/App/Server.App.csproj
+++ b/Server/App/Server.App.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>App</AssemblyName>
-    <RootNamespace>App</RootNamespace>
+    <RootNamespace>ET</RootNamespace>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
