配置工具生成了class跟json，下一步就是从json反序列化成对象，再序列化成pb即可

--- a/Tools/Proto2CS/Proto2CS.csproj
+++ b/Tools/Proto2CS/Proto2CS.csproj
@@ -10,11 +10,11 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>../../Proto/</OutputPath>
+      <OutputPath>../../ToolsApp/Proto2CS/</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <OutputPath>../../Proto/</OutputPath>
+      <OutputPath>../../ToolsApp/Proto2CS/</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
