--- a/Tools/ExcelExporter/ExcelExporter.csproj
+++ b/Tools/ExcelExporter/ExcelExporter.csproj
@@ -2,12 +2,20 @@
 
     <PropertyGroup>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <RootNamespace>ConfigTool</RootNamespace>
+        <RootNamespace>ET</RootNamespace>
     </PropertyGroup>
     
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
+    
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <OutputPath>../../ToolsApp/ExcelExporter/</OutputPath>
+    </PropertyGroup>
+    
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <OutputPath>../../ToolsApp/ExcelExporter/</OutputPath>
     </PropertyGroup>
     
     <ItemGroup>
