--- a/Tools/Proto2CS/Proto2CS.csproj
+++ b/Tools/Proto2CS/Proto2CS.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <PropertyGroup>
