--- a/Tools/ExcelExporter/ExcelExporter.csproj
+++ b/Tools/ExcelExporter/ExcelExporter.csproj
@@ -20,12 +20,29 @@
     
     <ItemGroup>
       <PackageReference Include="EPPlus" Version="5.5.2" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.9.0" />
     </ItemGroup>
     
     <ItemGroup>
       <None Update="Template.txt">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\..\Server\ThirdParty\Server.ThirdParty.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Compile Include="..\..\Unity\Assets\Model\Core\Object\BaseAttribute.cs">
+        <Link>BaseAttribute.cs</Link>
+      </Compile>
+      <Compile Include="..\..\Unity\Assets\Model\Module\Config\ConfigAttribute.cs">
+        <Link>ConfigAttribute.cs</Link>
+      </Compile>
+      <Compile Include="..\..\Unity\Assets\Model\Module\Config\IConfig.cs">
+        <Link>IConfig.cs</Link>
+      </Compile>
     </ItemGroup>
 
 </Project>
