--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -29,6 +29,10 @@
     <Compile Include="..\..\Unity\Assets\Model\Core\**\*.cs"> 
       <Link>Core\%(RecursiveDir)%(FileName)%(Extension)</Link>
     </Compile>
+
+    <Compile Include="..\..\Unity\Assets\Model\Module\Config\**\*.cs">
+      <Link>Module\Config\%(RecursiveDir)%(FileName)%(Extension)</Link>
+    </Compile>
     
     <Compile Remove="Libs\**" />
     
@@ -40,9 +44,6 @@
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Module\Actor\IActorMessage.cs">
       <Link>Module\Actor\IActorMessage.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Model\Module\Config\AConfigComponent.cs">
-      <Link>Module\Config\AConfigComponent.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Model\Module\CoroutineLock\CoroutineLock.cs">
       <Link>Module\CoroutineLock\CoroutineLock.cs</Link>
@@ -92,11 +93,13 @@
     <Compile Remove="Base\RecyclableMemoryStream\**" />
     <EmbeddedResource Remove="Base\RecyclableMemoryStream\**" />
     <None Remove="Base\RecyclableMemoryStream\**" />
+    <Compile Remove="Module\Config\ConfigHelper.cs" />
+    <Compile Remove="Module\Config\ConfigComponent.cs" />
+    <Compile Remove="Module\Config\**" />
+    <EmbeddedResource Remove="Module\Config\**" />
+    <None Remove="Module\Config\**" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Unity\Assets\Model\Module\Config\ACategory.cs" Link="Module\Config\ACategory.cs" />
-    <Compile Include="..\..\Unity\Assets\Model\Module\Config\ConfigAttribute.cs" Link="Module\Config\ConfigAttribute.cs" />
-    <Compile Include="..\..\Unity\Assets\Model\Module\Config\IConfig.cs" Link="Module\Config\IConfig.cs" />
     <Compile Include="..\..\Unity\Assets\Model\Module\Message\AMHandler.cs" Link="Module\Message\AMHandler.cs" />
     <Compile Include="..\..\Unity\Assets\Model\Module\Message\ErrorCode.cs" Link="Module\Message\ErrorCode.cs" />
     <Compile Include="..\..\Unity\Assets\Model\Module\Message\IMessage.cs" Link="Module\Message\IMessage.cs" />
