excel转protobuf成功，加载protobuf配置成功!

--- a/Tools/ExcelExporter/ExcelExporter.csproj
+++ b/Tools/ExcelExporter/ExcelExporter.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
         <RootNamespace>ET</RootNamespace>
     </PropertyGroup>
     
@@ -11,11 +12,11 @@
     </PropertyGroup>
     
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>../../ToolsApp/ExcelExporter/</OutputPath>
+      <OutputPath>./Bin</OutputPath>
     </PropertyGroup>
     
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <OutputPath>../../ToolsApp/ExcelExporter/</OutputPath>
+      <OutputPath>./Bin</OutputPath>
     </PropertyGroup>
     
     <ItemGroup>
