--- a/Tools/Proto2CS/Proto2CS.csproj
+++ b/Tools/Proto2CS/Proto2CS.csproj
@@ -3,19 +3,20 @@
     <PropertyGroup>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>../../ToolsApp/Proto2CS/</OutputPath>
+      <OutputPath>./Bin</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <OutputPath>../../ToolsApp/Proto2CS/</OutputPath>
+      <OutputPath>./Bin</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
