修改日志格式

--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -1,50 +1,62 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
+	<variable name="debuglayout" value="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2}" />
+	<variable name="consolelayout" value="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${callsite:className=false:methodName=true:fileName=true:includeSourcePath=false:skipFrames=2}" />
+	<variable name="path" value="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}"/>
+
 	<targets>
 		<target name="debug" xsi:type="File"
 				openFileCacheTimeout="3600"
-				fileName="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}-Debug.log"
+				keepFileOpen="true"
+				concurrentWrites="false"
+				fileName="${path}-Debug.log"
 				deleteOldFileOnStartup="false"
-				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
-	</targets>
+				layout="${debuglayout} ${message}" />
 
-	<targets>
 		<target name="info" xsi:type="File"
 				openFileCacheTimeout="3600"
-				fileName="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}-Info.log"
+				keepFileOpen="true"
+				concurrentWrites="false"
+				fileName="${path}-Info.log"
 				deleteOldFileOnStartup="false"
-				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
-	</targets>
+				layout="${debuglayout} ${message}" />
 
-	<targets>
 		<target name="error" xsi:type="File"
 				openFileCacheTimeout="3600"
-				fileName="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}-Error.log"
+				keepFileOpen="true"
+				concurrentWrites="false"
+				fileName="${path}-Error.log"
 				deleteOldFileOnStartup="false"
-				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
-	</targets>
+				layout="${debuglayout} ${message}" />
 
-	<targets>
-		<target name="errorConsole" xsi:type="Console"
-				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
-	</targets>
-
-	<targets>
 		<target name="warn" xsi:type="File"
 				openFileCacheTimeout="3600"
-				fileName="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}-Warning.log"
+				keepFileOpen="true"
+				concurrentWrites="false"
+				fileName="${path}-Warning.log"
 				deleteOldFileOnStartup="false"
-				layout="${longdate} ${message}" />
-	</targets>
+				layout="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${message}" />
 
-	<targets>
 		<target name="fatal" xsi:type="File"
 				openFileCacheTimeout="3600"
-				fileName="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}-Fatal.log"
+				keepFileOpen="true"
+				concurrentWrites="false"
+				fileName="${path}-Fatal.log"
 				deleteOldFileOnStartup="false"
-				layout="${longdate} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=2}" />
+				layout="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=2}" />
 	</targets>
+	
+	<targets>
+		<target name="errorConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="true"
+				layout="${consolelayout} ${message}" >
+			<highlight-row backgroundColor="NoChange" condition="level == LogLevel.Debug" foregroundColor="DarkGreen"/>
+			<highlight-row backgroundColor="NoChange" condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
+			<highlight-row backgroundColor="NoChange" condition="level == LogLevel.Error" foregroundColor="Red"/>
+		</target>
+	</targets>
+		
+		
 
 	<rules>
 		<logger name="*" minlevel="Trace" maxlevel="Fatal" writeTo="debug" />
