--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -1,69 +1,87 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-	<variable name="debuglayout" value="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2}" />
-	<variable name="consolelayout" value="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${callsite:className=false:methodName=true:fileName=true:includeSourcePath=false:skipFrames=2}" />
-	<variable name="path" value="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}"/>
+    <variable name="debuglayout" value="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2}"/>
+    <variable name="consolelayout" value="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${callsite:className=false:methodName=true:fileName=true:includeSourcePath=false:skipFrames=2}"/>
+    <variable name="path" value="${basedir}/../Logs/Log-${var:appIdFormat}-${date:universalTime=true:format=yyyyMMdd}"/>
 
-	<targets>
-		<target name="debug" xsi:type="File"
-				openFileCacheTimeout="3600"
-				keepFileOpen="true"
-				concurrentWrites="false"
-				fileName="${path}-Debug.log"
-				deleteOldFileOnStartup="false"
-				layout="${debuglayout} ${message}" />
+    <targets async="true">
+        <!-- <default-wrapper xsi:type="BufferingWrapper" bufferSize="100" flushTimeout="5000"/> --> <!-- 启用Buffer-->
+        <target name="debug" xsi:type="File"
+                openFileCacheTimeout="3600"
+                keepFileOpen="true"
+                concurrentWrites="false"
+                fileName="${path}-Debug.log"
+                deleteOldFileOnStartup="false"
+                layout="${debuglayout} ${message}"/>
 
-		<target name="info" xsi:type="File"
-				openFileCacheTimeout="3600"
-				keepFileOpen="true"
-				concurrentWrites="false"
-				fileName="${path}-Info.log"
-				deleteOldFileOnStartup="false"
-				layout="${debuglayout} ${message}" />
+        <target name="info" xsi:type="File"
+                openFileCacheTimeout="3600"
+                keepFileOpen="true"
+                concurrentWrites="false"
+                fileName="${path}-Info.log"
+                deleteOldFileOnStartup="false"
+                layout="${debuglayout} ${message}"/>
 
-		<target name="error" xsi:type="File"
-				openFileCacheTimeout="3600"
-				keepFileOpen="true"
-				concurrentWrites="false"
-				fileName="${path}-Error.log"
-				deleteOldFileOnStartup="false"
-				layout="${debuglayout} ${message}" />
+        <target name="error" xsi:type="File"
+                openFileCacheTimeout="3600"
+                keepFileOpen="true"
+                concurrentWrites="false"
+                fileName="${path}-Error.log"
+                deleteOldFileOnStartup="false"
+                layout="${debuglayout} ${message}"/>
 
-		<target name="warn" xsi:type="File"
-				openFileCacheTimeout="3600"
-				keepFileOpen="true"
-				concurrentWrites="false"
-				fileName="${path}-Warning.log"
-				deleteOldFileOnStartup="false"
-				layout="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${message}" />
+        <target name="warn" xsi:type="File"
+                openFileCacheTimeout="3600"
+                keepFileOpen="true"
+                concurrentWrites="false"
+                fileName="${path}-Warning.log"
+                deleteOldFileOnStartup="false"
+                layout="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${message}"/>
 
-		<target name="fatal" xsi:type="File"
-				openFileCacheTimeout="3600"
-				keepFileOpen="true"
-				concurrentWrites="false"
-				fileName="${path}-Fatal.log"
-				deleteOldFileOnStartup="false"
-				layout="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=2}" />
-	</targets>
-	
-	<targets>
-		<target name="errorConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="true"
-				layout="${consolelayout} ${message}" >
-			<highlight-row backgroundColor="NoChange" condition="level == LogLevel.Debug" foregroundColor="DarkGreen"/>
-			<highlight-row backgroundColor="NoChange" condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
-			<highlight-row backgroundColor="NoChange" condition="level == LogLevel.Error" foregroundColor="Red"/>
-		</target>
-	</targets>
-		
-		
+        <target name="fatal" xsi:type="File"
+                openFileCacheTimeout="3600"
+                keepFileOpen="true"
+                concurrentWrites="false"
+                fileName="${path}-Fatal.log"
+                deleteOldFileOnStartup="false"
+                layout="[${pad:padding=5:inner=${level:uppercase=true}} ${longdate}] | ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=2}"/>
+    </targets>
 
-	<rules>
-		<logger name="*" minlevel="Trace" maxlevel="Fatal" writeTo="debug" />
-		<logger name="*" minlevel="Info" maxlevel="Info" writeTo="info" />
-		<logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="warn" />
-		<logger name="*" minlevel="Error" maxlevel="Error" writeTo="error" />
-		<logger name="*" minlevel="Trace" maxlevel="Error" writeTo="errorConsole" />
-		<logger name="*" minlevel="Fatal" maxlevel="Fatal" writeTo="fatal" />
-	</rules>
+
+    <targets>
+        <target name="errorConsole" xsi:type="ColoredConsole" useDefaultRowHighlightingRules="true"
+                layout="${consolelayout} ${message}">
+            <highlight-row backgroundColor="NoChange" condition="level == LogLevel.Debug" foregroundColor="DarkGreen"/>
+            <highlight-row backgroundColor="NoChange" condition="level == LogLevel.Warn" foregroundColor="Yellow"/>
+            <highlight-row backgroundColor="NoChange" condition="level == LogLevel.Error" foregroundColor="Red"/>
+        </target>
+    </targets>
+
+    <!--
+    <targets async="true"> 
+        <target
+                name="sendEM" xsi:type="Mail"
+                smtpServer="smtp.163.com"
+                smtpPort="25" 
+                enableSsl="true"
+                smtpAuthentication="Basic"
+                smtpUserName="....@163.com"
+                smtpPassword="授权密码不是账号密码"
+                from="发件人邮箱"
+                to="收件人"
+                subject="主题"
+                body="${longdate} ${var:appTypeFormat} ${var:appIdFormat} ${message} ${newline} ${stacktrace:format=Raw:topFrames=10:skipFrames=0}"/>
+    </targets>
+    -->
+    
+    <rules>
+        <logger name="*" minlevel="Trace" maxlevel="Fatal" writeTo="debug"/>
+        <logger name="*" minlevel="Info" maxlevel="Info" writeTo="info"/>
+        <logger name="*" minlevel="Warn" maxlevel="Warn" writeTo="warn"/>
+        <logger name="*" minlevel="Error" maxlevel="Error" writeTo="error"/>
+        <!--<logger name="*" minlevel="Error" maxlevel="Error" writeTo="sendEM"/>-->
+        <logger name="*" minlevel="Trace" maxlevel="Error" writeTo="errorConsole"/>
+        <logger name="*" minlevel="Fatal" maxlevel="Fatal" writeTo="fatal"/>
+    </rules>
 </nlog>
