--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -202,6 +202,8 @@
      <Compile Include="Assets\Model\Module\Network\AChannel.cs" />
      <Compile Include="Assets\Model\Unit\UnitPathComponent.cs" />
      <Compile Include="Assets\Model\Scene\SceneHelper.cs" />
+     <Compile Include="Assets\Model\Scene\ZoneSceneManagerComponent.cs" />
+     <Compile Include="Assets\Model\Scene\ZoneSceneFlagComponent.cs" />
      <None Include="Assets\Model\Unity.Model.asmdef" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2020.2.2f1c1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
