分离Unit的逻辑跟显示层，Unit的GameObject放到GameObjectComponent组件上

--- a/Unity/Unity.Hotfix.csproj
+++ b/Unity/Unity.Hotfix.csproj
@@ -74,6 +74,7 @@
      <Compile Include="Assets\Hotfix\Module\Message\SessionAcceptTimeoutComponentSystem.cs" />
      <Compile Include="Assets\Hotfix\Scene\ZoneSceneFlagComponentSystem.cs" />
      <Compile Include="Assets\Hotfix\Scene\ZoneSceneManagerComponentSystem.cs" />
+     <Compile Include="Assets\Hotfix\Unit\UnitSystem.cs" />
      <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2020.2.2f1c1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
