--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -52,13 +52,12 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Model\Helper\PathHelper.cs" />
-     <Compile Include="Assets\Model\Unit\TurnComponent.cs" />
+     <Compile Include="Assets\Model\Demo\Helper\PathHelper.cs" />
+     <Compile Include="Assets\Model\Demo\Unit\TurnComponent.cs" />
      <Compile Include="Assets\Model\Core\DoubleMap.cs" />
      <Compile Include="Assets\Model\Core\Entity\EntitySceneFactory.cs" />
      <Compile Include="Assets\Model\Module\Message\MessagePackHelper.cs" />
      <Compile Include="Assets\Model\Module\Message\MessageProxy.cs" />
-     <Compile Include="Assets\Model\EventType.cs" />
      <Compile Include="Assets\Model\Core\UnOrderMultiMapSet.cs" />
      <Compile Include="Assets\Model\Generate\Config\UnitConfig.cs" />
      <Compile Include="Assets\Model\Core\Entity\SceneType.cs" />
@@ -75,7 +74,7 @@
      <Compile Include="Assets\Model\Core\Object\BaseAttribute.cs" />
      <Compile Include="Assets\Model\Generate\Config\StartZoneConfig.cs" />
      <Compile Include="Assets\Model\Module\CoroutineLock\CoroutineLockQueueType.cs" />
-     <Compile Include="Assets\Model\Unit\Unit.cs" />
+     <Compile Include="Assets\Model\Demo\Unit\Unit.cs" />
      <Compile Include="Assets\Model\Generate\Message\OuterMessage.cs" />
      <Compile Include="Assets\Model\Module\Message\MessageSerializeHelper.cs" />
      <Compile Include="Assets\Model\Core\Object\IUpdateSystem.cs" />
@@ -108,13 +107,12 @@
      <Compile Include="Assets\Model\Module\UnityWebRequest\UnityWebRequestRenewalAsync.cs" />
      <Compile Include="Assets\Model\Core\Entity\TimerComponent.cs" />
      <Compile Include="Assets\Model\Module\CoroutineLock\CoroutineLockType.cs" />
-     <Compile Include="Assets\Model\Define.cs" />
      <Compile Include="Assets\Model\Core\Helper\ByteHelper.cs" />
      <Compile Include="Assets\Model\Core\Async\IAwaiter.cs" />
      <Compile Include="Assets\Model\Core\ThreadSynchronizationContext.cs" />
      <Compile Include="Assets\Model\Core\Log\LogHelper.cs" />
      <Compile Include="Assets\Model\Core\MultiMapSet.cs" />
-     <Compile Include="Assets\Model\Session\SessionComponent.cs" />
+     <Compile Include="Assets\Model\Demo\Session\SessionComponent.cs" />
      <Compile Include="Assets\Model\Core\Object\ILoadSystem.cs" />
      <Compile Include="Assets\Model\Core\Entity\Scene.cs" />
      <Compile Include="Assets\Model\Core\Object\ILateUpdateSystem.cs" />
@@ -148,7 +146,7 @@
      <Compile Include="Assets\Model\Module\Numeric\NumericWatcherComponent.cs" />
      <Compile Include="Assets\Model\Core\Async\AsyncETTaskMethodBuilder.cs" />
      <Compile Include="Assets\Model\Core\Helper\MD5Helper.cs" />
-     <Compile Include="Assets\Model\Unit\UnitComponent.cs" />
+     <Compile Include="Assets\Model\Demo\Unit\UnitComponent.cs" />
      <Compile Include="Assets\Model\Module\Config\ConfigComponent.cs" />
      <Compile Include="Assets\Model\Core\Helper\ObjectHelper.cs" />
      <Compile Include="Assets\Model\Module\Message\IMHandler.cs" />
@@ -186,12 +184,12 @@
      <Compile Include="Assets\Model\Module\NetworkTCP\TService.cs" />
      <Compile Include="Assets\Model\Generate\Message\OuterOpcode.cs" />
      <Compile Include="Assets\Model\Core\MultiMapComponent.cs" />
-     <Compile Include="Assets\Model\Helper\PositionHelper.cs" />
+     <Compile Include="Assets\Model\Demo\Helper\PositionHelper.cs" />
      <Compile Include="Assets\Model\Core\ListComponent.cs" />
      <Compile Include="Assets\Model\Core\Log\NLogger.cs" />
      <Compile Include="Assets\Model\Core\Async\ETTaskCompletionSource.cs" />
      <Compile Include="Assets\Model\Core\Helper\StringHelper.cs" />
-     <Compile Include="Assets\Model\Unit\MoveComponent.cs" />
+     <Compile Include="Assets\Model\Demo\Unit\MoveComponent.cs" />
      <Compile Include="Assets\Model\Module\Message\MessagePool.cs" />
      <Compile Include="Assets\Model\Module\Config\IConfig.cs" />
      <Compile Include="Assets\Model\Module\Message\ResponseTypeAttribute.cs" />
@@ -200,10 +198,12 @@
      <Compile Include="Assets\Model\Core\Async\ETTaskHelper.cs" />
      <Compile Include="Assets\Model\Module\NetworkTCP\TChannel.cs" />
      <Compile Include="Assets\Model\Module\Network\AChannel.cs" />
-     <Compile Include="Assets\Model\Unit\UnitPathComponent.cs" />
-     <Compile Include="Assets\Model\Scene\SceneHelper.cs" />
-     <Compile Include="Assets\Model\Scene\ZoneSceneManagerComponent.cs" />
-     <Compile Include="Assets\Model\Scene\ZoneSceneFlagComponent.cs" />
+     <Compile Include="Assets\Model\Demo\Unit\UnitPathComponent.cs" />
+     <Compile Include="Assets\Model\Demo\EventType.cs" />
+     <Compile Include="Assets\Model\Core\Scene\ZoneSceneManagerComponent.cs" />
+     <Compile Include="Assets\Model\Demo\Define.cs" />
+     <Compile Include="Assets\Model\Core\Scene\ZoneSceneFlagComponent.cs" />
+     <Compile Include="Assets\Model\Core\Scene\SceneHelper.cs" />
      <None Include="Assets\Model\Unity.Model.asmdef" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2020.2.2f1c1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
