1.新的移动组件，支持传入多个寻路点 2.客户端消息打印成json 3.创建unit初始化数值，并且同步数值给客户端 4.删除Server.sln,不要再用这个了，请使用Client-Server.sln 测试移动OK,很顺滑

--- a/Server/Hotfix/Server.Hotfix.csproj
+++ b/Server/Hotfix/Server.Hotfix.csproj
@@ -20,6 +20,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Other\**" />
+    <Compile Include="..\..\Unity\Assets\Hotfix\Demo\Move\MoveComponentSystem.cs">
+      <Link>Demo\Move\MoveComponentSystem.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Hotfix\Module\Config\ConfigComponentSystem.cs">
       <Link>Module\Config\ConfigComponentSystem.cs</Link>
     </Compile>
