1.忽略unity工程文件 2.所有工程警告当错误

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ Server/.DS_Store
 /Unity/.gradle
 /*.user
 /ToolsApp/
+/Unity/Unity.Editor.csproj
+/Unity/Unity.Hotfix.csproj
+/Unity/Unity.HotfixView.csproj
+/Unity/Unity.Model.csproj
+/Unity/Unity.ModelView.csproj
+/Unity/Unity.ThirdParty.csproj
