ai框架提交，附带一个小例子，登录进游戏，角色会自动巡逻10秒，停下来攻击5秒，然后再巡逻10秒，一直循环下去 注意AIConfig表中，每个ai是一个sheet，表中可以配置多个ai

--- a/Server/Hotfix/Server.Hotfix.csproj
+++ b/Server/Hotfix/Server.Hotfix.csproj
@@ -47,8 +47,10 @@
     <Compile Include="..\..\Unity\Assets\Hotfix\Module\Numeric\NumericWatcher_Hp_ShowUI.cs">
       <Link>Module\Numeric\NumericWatcher_Hp_ShowUI.cs</Link>
     </Compile>
-    <EmbeddedResource Remove="Other\**" />
-    <None Remove="Other\**" />
+
+    <Compile Include="..\..\Unity\Assets\Hotfix\Module\AI\**\*.cs">
+      <Link>Module\AI\%(RecursiveDir)%(FileName)%(Extension)</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\Server.Model.csproj" />
